update project to go 1.23
